// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`block-comment.json 1`] = `
{/*comment*/"K":"V"}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{ /*comment*/ "K": "V" }

`;

exports[`block-comment.json 2`] = `
{/*comment*/"K":"V"}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{ /*comment*/ "K": "V" }

`;

exports[`block-comment.json 3`] = `
{/*comment*/"K":"V"}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{ /*comment*/ K: "V" }

`;

exports[`block-comment.json 4`] = `
{/*comment*/"K":"V"}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{ /*comment*/ K: "V" }

`;

exports[`line-comment.json 1`] = `
{
  //comment
  "K":"V"
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{
  //comment
  "K": "V"
}

`;

exports[`line-comment.json 2`] = `
{
  //comment
  "K":"V"
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{
  //comment
  "K": "V"
}

`;

exports[`line-comment.json 3`] = `
{
  //comment
  "K":"V"
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{
  //comment
  K: "V"
}

`;

exports[`line-comment.json 4`] = `
{
  //comment
  "K":"V"
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{
  //comment
  K: "V",
}

`;

exports[`top-block-comment.json 1`] = `
/* comment */{
  "foo": "bar"
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* comment */ {
  "foo": "bar"
}

`;

exports[`top-block-comment.json 2`] = `
/* comment */{
  "foo": "bar"
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* comment */ {
  "foo": "bar"
}

`;

exports[`top-block-comment.json 3`] = `
/* comment */{
  "foo": "bar"
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* comment */ {
  foo: "bar"
}

`;

exports[`top-block-comment.json 4`] = `
/* comment */{
  "foo": "bar"
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* comment */ {
  foo: "bar",
}

`;

exports[`top-line-comment.json 1`] = `
// comment 1
// comment 2
{
  "foo": "bar"
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// comment 1
// comment 2
{
  "foo": "bar"
}

`;

exports[`top-line-comment.json 2`] = `
// comment 1
// comment 2
{
  "foo": "bar"
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// comment 1
// comment 2
{
  "foo": "bar"
}

`;

exports[`top-line-comment.json 3`] = `
// comment 1
// comment 2
{
  "foo": "bar"
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// comment 1
// comment 2
{
  foo: "bar"
}

`;

exports[`top-line-comment.json 4`] = `
// comment 1
// comment 2
{
  "foo": "bar"
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// comment 1
// comment 2
{
  foo: "bar",
}

`;
